--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>jimmy.practice.gradle</groupId>
-    <artifactId>xiaYuePlus2</artifactId>
+    <artifactId>BurpSuitePlugin</artifactId>
     <version>1.0-SNAPSHOT</version>
 
     <properties>
